--- a/RN.Lux.AngularWebUI/RN.Lux.AngularWebUI.csproj
+++ b/RN.Lux.AngularWebUI/RN.Lux.AngularWebUI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,22 @@
   <ItemGroup>
     <!-- Files not to publish (note that the 'dist' subfolders are re-added below) -->
     <Content Remove="ClientApp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\models\category.ts" />
+    <None Remove="ClientApp\models\product.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RN.Core\RN.Core.csproj" />
+    <ProjectReference Include="..\RN.Lux.Business\RN.Lux.Business.csproj" />
+    <ProjectReference Include="..\RN.Lux.Entities\RN.Lux.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\models\category.ts" />
+    <TypeScriptCompile Include="ClientApp\models\product.ts" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
