--- a/RN.Lux.MvcWebUI/package.json
+++ b/RN.Lux.MvcWebUI/package.json
@@ -8,6 +8,13 @@
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "jquery-validation": "1.16.0",
-    "jquery-validation-unobtrusive": "3.2.10"
+    "jquery-validation-unobtrusive": "3.2.10",
+    "browser-sync": "^2.13.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.10",
+    "gulp-header": "^1.8.7",
+    "gulp-less": "^3.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.4"
   }
 }
