--- a/RN.Lux.AngularWepAPI/RN.Lux.AngularWepAPI.csproj
+++ b/RN.Lux.AngularWepAPI/RN.Lux.AngularWepAPI.csproj
@@ -1,15 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.7" />
   </ItemGroup>
 
   <ItemGroup>
